Refactoring of Operator, QC and ImageOverlayUtil + addition of view functionality for QC